# givt-toekenning

./: CMakeLists.txt  Readme.md  givt-toekenning.cpp
